--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "creza",
+  "name": "Crew",
   "version": "1.0.0",
-  "main": "creza.js",
+  "main": "crew.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
